Fixed bug #38469 (unexpected creation of cycle, json tests failed, leaks memory)